[GLib] Developer build with release logs disabled fails https://bugs.webkit.org/show_bug.cgi?id=232931

Patch by Philippe Normand <pnormand@igalia.com> on 2021-11-12
Reviewed by Adrian Perez de Castro.

* platform/audio/PlatformMediaSession.cpp: Remove ifdef around convertEnumerationToString
functions, required by Internals.


Canonical link: https://commits.webkit.org/244177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285718 268f45cc-cd09-0410-ab3c-d52691b4dbfc