Source/WebCore/platform/audio/PlatformMediaSession.cpp
@@ -37,7 +37,6 @@ namespace WebCore {
 
 static constexpr Seconds clientDataBufferingTimerThrottleDelay { 100_ms };
 
-#if !RELEASE_LOG_DISABLED
 String convertEnumerationToString(PlatformMediaSession::State state)
 {
     static const NeverDestroyed<String> values[] = {
@@ -120,8 +119,6 @@ String convertEnumerationToString(PlatformMediaSession::RemoteControlCommandType
     ASSERT(static_cast<size_t>(command) < WTF_ARRAY_LENGTH(values));
     return values[static_cast<size_t>(command)];
 }
-
-#endif
 
 std::unique_ptr<PlatformMediaSession> PlatformMediaSession::create(PlatformMediaSessionManager& manager, PlatformMediaSessionClient& client)
 {
